--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
   "name": "brain-game-roman-prj",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Brain Games",
   "main": "brain-games.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+	"build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
+	"prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ramzesnic/project-lvl1-s404.git"
   },
+	"bin": {
+ "brain-games": "dist/bin/brain-games.js"
+},
+	"files": [
+    "dist"
+  ],
   "keywords": [
     "brain",
     "game"
