--- a/package.json
+++ b/package.json
@@ -32,9 +32,14 @@
 		"@babel/cli": "^7.2.3",
 		"@babel/core": "^7.2.2",
 		"@babel/node": "^7.2.2",
-		"@babel/preset-env": "^7.2.3"
+		"@babel/preset-env": "^7.2.3",
+		"babel-eslint": "^10.0.1",
+		"eslint": "^5.11.0",
+		"eslint-config-airbnb-base": "^13.1.0",
+		"eslint-plugin-import": "^2.14.0"
 	},
 	"dependencies": {
+		"eslint-plugin-babel": "^5.3.0",
 		"readline-sync": "^1.4.9"
 	}
 }
