--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
-    "brain-even": "dist/din/brain-even.js"
+    "brain-even": "dist/din/brain-even.js",
+    "brain-calc": "dist/bin/brain-calc.js"
   },
   "files": [
     "dist"
